<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--<string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_four_in_row">4² In Row</string>
    <string name="hello">Hello FourInRow!</string>
    <string name="replay">Replay</string>-->

    <!--Activity Names-->
    <string name="app_name">4² In Row</string>
    <string name="mainSettings">Settings</string>
    <string name="friendList">Friend List</string>
    <string name="pickOpponent">Pick an opponent</string>

    <!--Checkbox Messages-->
    <string name="rememberPassword">Check to remember the password</string>

    <!--Button Messages-->
    <string name="delete">Delete</string>
    <string name="playNearPlayerButton">Play Against Near Player</string>
    <string name="playFriendButton">Play Against Friend</string>
    <string name="addFriendButton">Add</string>
    <string name="registerButton">Register</string>
    <string name="modifyButton">Modify grid</string>
    <string name="playButton">Play</string>
    <!-- Set in OpponentPickerAdapter -->
    <string name="connectButton">Connect</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="settingsButton">Settings</string>
    <string name="friendListButton">Friend List</string>

    <!--TextView Messages-->
    <string name="loading">LOADING...</string>
    <string name="friendSettings">Friend List Settings</string>
    <string name="addFriend">Add a friend</string>
    <string name="countShuffle">Number of shuffles : </string>
    <string name="currentTurn">Current Turn : </string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="heightGrid">Height : </string>
    <string name="widthGrid">Width : </string>
    <string name="gridSettings">Grid settings</string>
    <string name="connection">Connection</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="waitingPlayerAnswer">Waiting for player\'s answer</string>

    <!--Toast Messages-->
    <string name="connected">Connected</string>
    <string name="registrationSuccess">Registered</string>
    <string name="friendRemoved">Friend removed</string>
    <string name="gridModified">Grid settings modified</string>
    <string name="connectBeforePlay">Please connect in settings before playing</string>
    <string name="gameRefused">Your opponent has refused the invitation</string>
    <string name="connectBeforeAccessFriends">Please connect in settings before accessing to friend list</string>
    <string name="shuffle">Shuffle !</string>
    <string name="friendAdded">Friend added</string>
    <string name="partyNull">Draw !</string>
    <string name="hasWon">has won</string>
    <string name="opponentDisconnected">The opponent has been disconnected</string>
    <string name="opponentShuffle">Opponent\'s shuffle !</string>
    <string name="noMoreShuffles">No more shuffle remaining</string>

    <!--Toast Error Messages-->
    <string name="unknownUsername">Unknown username</string>
    <string name="connectCommunicationError">Error while connecting to server</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="authenticateTimeout">Authentication request to server timed out</string>
    <string name="authenticateError">Error during authentication</string>
    <string name="authenticateUnhandledError">Unhandled error during authentication</string>
    <string name="registrationUsernameTaken">Username already taken</string>
    <string name="registrationTimeout">Registration request to server timed out</string>
    <string name="registrationError">Error during registration</string>
    <string name="registrationUnhandledError">Unhandled error during registration</string>
    <string name="friendDeletionUnhandledError">Unhandled error during deletion of a friend</string>
    <string name="proposeGameError">Error while proposing game to the opponent</string>
    <string name="proposeGameUnhandledError">Unhandled error while proposing game to the opponent</string>
    <string name="alreadyFriendError">This user is already your friend</string>
    <string name="addFriendError">Error while adding friend</string>
    <string name="addFriendTimeout">Add friend request timed out</string>
    <string name="fullColumnError">Full column</string>
    <string name="impossibleColumnPlayError">Internal error : Impossible to play in this column</string>
    <string name="noneMoveError">Internal error : None player tried to make a move</string>
    <string name="fullRowError">Full row</string>
    <string name="impossibleRowPlayError">Internal error : Impossible to play in this row</string>
    <string name="notYourTurnError">Wait your turn</string>
    <string name="impossibleOpponentMove">Internal error : Impossible opponent move</string>
    <string name="partySettingError">Error while setting game</string>
    <string name="winnerUnhandledError">Unhandled error while getting end of game call</string>

    <!--Notifications Messages-->
    <string name="requestsAMatch">requests a game.</string>
    <string name="touchToAccept">Touch to accept.</string>
    <string name="isRunning">is running.</string>
    <string name="open">Open</string>
    <string name="quit">Quit</string>
</resources>
