<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text"
            android:text="@string/addFriend"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_medium">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:text="@string/username"/>
        <EditText
                android:id="@+id/editFriendUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/small_text"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:text="@string/addFriendButton"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friendList"
            android:textSize="@dimen/medium_text"/>
    <ListView
            android:id="@+id/friendList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_medium"/>
</LinearLayout>