<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="#33CC33"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textSize="@dimen/title_text"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/app_name" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonPlayNearPlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium_text"
                android:textColor="#FF0000"
                android:text="@string/playNearPlayerButton"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonPlayFriend"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium_text"
                android:textColor="#FFFF00"
                android:text="@string/playFriendButton"
                android:layout_width="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonFriendList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text"
                android:textColor="#0000FF"
                android:text="@string/friendListButton" />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium_text"
                android:textColor="#00FF00"
                android:text="@string/settingsButton"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>